Fix fixed data table text overflow

--- a/src/components/FixedDataTable/styles/fixed-data-table.css
+++ b/src/components/FixedDataTable/styles/fixed-data-table.css
@@ -61,8 +61,15 @@
   background-color: transparent;
 }
 
+.fixedDataTableCellLayout_wrap1 {
+  table-layout: fixed;
+}
+
 .public_fixedDataTableCell_cellContent {
   padding: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .public_fixedDataTableCell_columnResizerKnob {
